# ddqa

./: .gitignore  404.html  CONTRIBUTING.md  HISTORY.md  LICENSE-3rdparty.csv  LICENSE.txt  NOTICE  README.md  hatch.toml  index.html  mkdocs.yml  pyoxidizer.bzl  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.disabled
.github/actions/build-macos-package/: action.yml
.github/actions/install-rcodesign/: action.yml
.github/workflows/: build.yml  docs.yml  publish-docs.yml  publish.yml  test.yml
actions/create/: index.html
actions/status/: index.html
app/: pyoxidizer.bzl
app/macos/: entitlements.plist
assets/css/: custom.css
config/repo/: index.html
config/sync/: index.html
config/user/: index.html
docs/: index.md  install.md
docs/.snippets/: abbrs.txt  links.txt
docs/actions/: create.md  status.md
docs/config/: repo.md  sync.md  user.md
install/: index.html
scripts/: fix_requirements.py
search/: search_index.json
src/ddqa/: __about__.py  __main__.py
src/ddqa/app/: core.py  style.py
src/ddqa/cache/: github.py  jira.py
src/ddqa/cli/: __init__.py
src/ddqa/cli/cache/: __init__.py  explore.py  find.py  purge.py  remove.py
src/ddqa/cli/config/: __init__.py  edit.py  explore.py  find.py  restore.py  set.py  show.py
src/ddqa/cli/create/: __init__.py
src/ddqa/cli/status/: __init__.py
src/ddqa/cli/sync/: __init__.py
src/ddqa/config/: constants.py  core.py  file.py  utils.py
src/ddqa/models/: github.py  jira.py
src/ddqa/models/config/: app.py  auth.py  repo.py  team.py
src/ddqa/screens/: configure.py  create.py  status.py  sync.py
src/ddqa/utils/: ci.py  errors.py  fs.py  git.py  github.py  jira.py  network.py  structures.py  time.py  toml.py  widgets.py
src/ddqa/widgets/: input.py  layout.py  static.py
tests/: common.py  conftest.py
tests/cache/: test_github.py
tests/cli/cache/: test_explore.py  test_find.py  test_purge.py  test_remove.py
tests/cli/config/: test_edit.py  test_explore.py  test_find.py  test_restore.py  test_set.py  test_show.py
tests/cli/create/: test_create.py
tests/cli/status/: test_status.py
tests/cli/sync/: test_sync.py
tests/config/: test_core.py
tests/data/: test_auth.py
tests/helpers/: api.py
tests/models/: test_jira.py
tests/screens/: test_configure.py  test_create.py  test_status.py  test_sync.py
tests/utils/: test_fs.py  test_git.py  test_github.py  test_jira.py  test_structures.py  test_time.py
tests/widgets/: test_input.py
